--- a/Session 3/projet3.ipynb
+++ b/Session 3/projet3.ipynb
@@ -14,7 +14,8 @@
    "outputs": [],
    "source": [
     "# imports\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import numpy as np"
    ]
   },
   {
@@ -45,7 +46,32 @@
     "# names us\n",
     "def df_names_us():\n",
     "    df = pd.DataFrame()\n",
+    "    for year in range(1880,2021):\n",
+    "        dfannee=pd.read_csv(\"names/yob\"+str(year)+\".txt\",names = [\"name\",\"gender\",\"births\"])\n",
+    "        dfannee[\"year\"] = year\n",
+    "        dfannee = dfannee[['year', 'name', 'gender', 'births']]\n",
+    "        df = df.append(dfannee)\n",
+    "    df = df.reset_index(drop=True)\n",
+    "        \n",
     "    return df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = df_names_us()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df"
    ]
   },
   {
@@ -89,7 +115,28 @@
     "# names fr\n",
     "def df_names_fr():\n",
     "    df = pd.DataFrame()\n",
+    "    df = pd.read_csv(\"nat2020.csv\",sep=\";\",header = 0,names=[\"gender\",\"name\",\"year\",\"births\"])\n",
+    "    df = df[[\"year\",\"name\",\"gender\",\"births\"]]\n",
+    "    mapping_gender = {1:\"M\",2:\"F\"}\n",
+    "    df[\"gender\"]=df[\"gender\"].map(mapping_gender)\n",
+    "    df['name'] = df['name'].str.title()\n",
+    "    df['year'] = (pd.to_numeric(df['year'],errors='coerce').fillna(np.nan))\n",
+    "    df['year'] = df['year'].astype('Int64')\n",
+    "    df['name'] = df['name'].astype(dtype = \"str\")\n",
+    "    df = df.loc[df['name'].str.len() >= 2]\n",
+    "    df = df[(df['name'] != '_Prenoms_Rares') & (df[\"year\"] !=\"XXXX\")]\n",
+    "    df = df.sort_values(by=['year', 'gender', 'births', 'name'], ascending=[True, True, False, True], ignore_index=True)\n",
     "    return df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = df_names_fr()\n",
+    "df"
    ]
   },
   {
@@ -121,9 +168,29 @@
    "source": [
     "# taux de change\n",
     "def df_taux_change(devises):\n",
-    "    df = pd.DataFrame([], columns=devises)\n",
-    "    return df"
+    "    df=pd.read_csv('Webstat_Export_20210929.csv',sep=\";\",index_col='Titre :',na_values=['-',''],skiprows=[1,2,3,4,5])\n",
+    "    \n",
+    "    df.dropna(inplace =True)\n",
+    "    df.columns=[col[-4:-1] for col in df.columns]\n",
+    "    df = df.loc[:,devises]\n",
+    "    \n",
+    "    df=df.rename_axis('Date')\n",
+    "    df.index=pd.to_datetime(df.index,format='%d/%m/%Y')\n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "    df.replace(',','.',inplace=True,regex=True)\n",
+    "    df = df.astype(float)\n",
+    "    \n",
+    "    return df\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -202,6 +269,20 @@
     "\n",
     "run_tests()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -220,7 +301,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
