--- a/Session 3/projet3.ipynb
+++ b/Session 3/projet3.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,9 +67,141 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>year</th>\n",
+       "      <th>name</th>\n",
+       "      <th>gender</th>\n",
+       "      <th>births</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1900</td>\n",
+       "      <td>Marie</td>\n",
+       "      <td>F</td>\n",
+       "      <td>48713</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1900</td>\n",
+       "      <td>Jeanne</td>\n",
+       "      <td>F</td>\n",
+       "      <td>13981</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1900</td>\n",
+       "      <td>Marguerite</td>\n",
+       "      <td>F</td>\n",
+       "      <td>8058</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1900</td>\n",
+       "      <td>Germaine</td>\n",
+       "      <td>F</td>\n",
+       "      <td>6981</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1900</td>\n",
+       "      <td>Louise</td>\n",
+       "      <td>F</td>\n",
+       "      <td>6696</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>630402</th>\n",
+       "      <td>2020</td>\n",
+       "      <td>Élouen</td>\n",
+       "      <td>M</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>630403</th>\n",
+       "      <td>2020</td>\n",
+       "      <td>Énes</td>\n",
+       "      <td>M</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>630404</th>\n",
+       "      <td>2020</td>\n",
+       "      <td>Éphraïm</td>\n",
+       "      <td>M</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>630405</th>\n",
+       "      <td>2020</td>\n",
+       "      <td>Éros</td>\n",
+       "      <td>M</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>630406</th>\n",
+       "      <td>2020</td>\n",
+       "      <td>Ézekiel</td>\n",
+       "      <td>M</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>630407 rows × 4 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        year        name gender  births\n",
+       "0       1900       Marie      F   48713\n",
+       "1       1900      Jeanne      F   13981\n",
+       "2       1900  Marguerite      F    8058\n",
+       "3       1900    Germaine      F    6981\n",
+       "4       1900      Louise      F    6696\n",
+       "...      ...         ...    ...     ...\n",
+       "630402  2020      Élouen      M       3\n",
+       "630403  2020        Énes      M       3\n",
+       "630404  2020     Éphraïm      M       3\n",
+       "630405  2020        Éros      M       3\n",
+       "630406  2020     Ézekiel      M       3\n",
+       "\n",
+       "[630407 rows x 4 columns]"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df"
    ]
@@ -108,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,9 +263,141 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>year</th>\n",
+       "      <th>name</th>\n",
+       "      <th>gender</th>\n",
+       "      <th>births</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1900</td>\n",
+       "      <td>Marie</td>\n",
+       "      <td>F</td>\n",
+       "      <td>48713</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1900</td>\n",
+       "      <td>Jeanne</td>\n",
+       "      <td>F</td>\n",
+       "      <td>13981</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1900</td>\n",
+       "      <td>Marguerite</td>\n",
+       "      <td>F</td>\n",
+       "      <td>8058</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1900</td>\n",
+       "      <td>Germaine</td>\n",
+       "      <td>F</td>\n",
+       "      <td>6981</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1900</td>\n",
+       "      <td>Louise</td>\n",
+       "      <td>F</td>\n",
+       "      <td>6696</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>630402</th>\n",
+       "      <td>2020</td>\n",
+       "      <td>Élouen</td>\n",
+       "      <td>M</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>630403</th>\n",
+       "      <td>2020</td>\n",
+       "      <td>Énes</td>\n",
+       "      <td>M</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>630404</th>\n",
+       "      <td>2020</td>\n",
+       "      <td>Éphraïm</td>\n",
+       "      <td>M</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>630405</th>\n",
+       "      <td>2020</td>\n",
+       "      <td>Éros</td>\n",
+       "      <td>M</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>630406</th>\n",
+       "      <td>2020</td>\n",
+       "      <td>Ézekiel</td>\n",
+       "      <td>M</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>630407 rows × 4 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        year        name gender  births\n",
+       "0       1900       Marie      F   48713\n",
+       "1       1900      Jeanne      F   13981\n",
+       "2       1900  Marguerite      F    8058\n",
+       "3       1900    Germaine      F    6981\n",
+       "4       1900      Louise      F    6696\n",
+       "...      ...         ...    ...     ...\n",
+       "630402  2020      Élouen      M       3\n",
+       "630403  2020        Énes      M       3\n",
+       "630404  2020     Éphraïm      M       3\n",
+       "630405  2020        Éros      M       3\n",
+       "630406  2020     Ézekiel      M       3\n",
+       "\n",
+       "[630407 rows x 4 columns]"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df = df_names_fr()\n",
     "df"
@@ -162,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -248,7 +512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -261,9 +525,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "test_df_names_fr (__main__.Lesson4Tests) ... ok\n",
+      "test_df_names_us (__main__.Lesson4Tests) ... ok\n",
+      "test_df_taux_change (__main__.Lesson4Tests) ... ok\n",
+      "\n",
+      "----------------------------------------------------------------------\n",
+      "Ran 3 tests in 14.685s\n",
+      "\n",
+      "OK\n"
+     ]
+    }
+   ],
    "source": [
     "# run tests\n",
     "\n",
