Rendu exercice session 4

--- a/Session 4/projet4.ipynb
+++ b/Session 4/projet4.ipynb
@@ -123,16 +123,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 171,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'name': 'Mélusine Bio', 'note': 70, 'price': '38,99', 'volume': 33}"
+       "{'name': 'Mélusine Bio', 'note': 70, 'price': 38.99, 'volume': 33}"
       ]
      },
-     "execution_count": 169,
+     "execution_count": 171,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -212,21 +212,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 173,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ValueError",
-     "evalue": "invalid literal for int() with base 10: '42,99'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-161-bc5de4fafb06>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mextract_beer_list_infos\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mURL_BEERLIST_FRANCE\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;32m<ipython-input-144-397db4b6d924>\u001b[0m in \u001b[0;36mextract_beer_list_infos\u001b[1;34m(url)\u001b[0m\n\u001b[0;32m      9\u001b[0m     \u001b[0murl\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;34m'https://www.beerwulf.com'\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     10\u001b[0m     \u001b[1;32mfor\u001b[0m \u001b[0mj\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mbeer_list\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 11\u001b[1;33m         \u001b[0mbeers\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mextract_beer_infos\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0murl\u001b[0m \u001b[1;33m+\u001b[0m \u001b[0mbeer_pages\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mj\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     12\u001b[0m     \u001b[1;31m# Parallel version (faster):\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     13\u001b[0m     \u001b[0mbeers\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m<ipython-input-159-d7b0ebd5d94e>\u001b[0m in \u001b[0;36mextract_beer_infos\u001b[1;34m(url)\u001b[0m\n\u001b[0;32m      5\u001b[0m         \u001b[1;34m'name'\u001b[0m\u001b[1;33m:\u001b[0m \u001b[0msoup\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfind\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"h1\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtext\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      6\u001b[0m         \u001b[1;34m'note'\u001b[0m\u001b[1;33m:\u001b[0m \u001b[0msoup\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfind\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'div'\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m{\u001b[0m\u001b[1;34m'class'\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;34m\"stars\"\u001b[0m\u001b[1;33m}\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mget\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"data-percent\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 7\u001b[1;33m         \u001b[1;34m'price'\u001b[0m\u001b[1;33m:\u001b[0m \u001b[0mint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0msoup\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfind\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'span'\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m{\u001b[0m\u001b[1;34m'class'\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;34m\"price\"\u001b[0m\u001b[1;33m}\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtext\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msplit\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\" \"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      8\u001b[0m         \u001b[1;34m'volume'\u001b[0m\u001b[1;33m:\u001b[0m \u001b[0mint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0msoup\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfind\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'dd'\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m{\u001b[0m\u001b[1;34m'class'\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;34m\"small-6 medium-9 columns js-beer-volume\"\u001b[0m\u001b[1;33m}\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mget\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"data-volume\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msplit\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\" \"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      9\u001b[0m     }\n",
-      "\u001b[1;31mValueError\u001b[0m: invalid literal for int() with base 10: '42,99'"
-     ]
+     "data": {
+      "text/plain": [
+       "[{'name': 'Gallia East IPA', 'note': 80, 'price': 42.99, 'volume': 33},\n",
+       " {'name': 'La Lager Sans Gluten de Vézelay',\n",
+       "  'note': 60,\n",
+       "  'price': 38.99,\n",
+       "  'volume': 25},\n",
+       " {'name': 'Brasserie De Sutter Brin de Folie',\n",
+       "  'note': 70,\n",
+       "  'price': 44.99,\n",
+       "  'volume': 33},\n",
+       " {'name': 'La Cristal IPA du Mont Blanc',\n",
+       "  'note': 70,\n",
+       "  'price': 44.99,\n",
+       "  'volume': 33},\n",
+       " {'name': 'Mélusine Bio', 'note': 70, 'price': 38.99, 'volume': 33},\n",
+       " {'name': 'La Parisienne Le Titi Parisien',\n",
+       "  'note': 70,\n",
+       "  'price': 38.99,\n",
+       "  'volume': 33},\n",
+       " {'name': 'Gallia Session IPA', 'note': 70, 'price': 42.99, 'volume': 33},\n",
+       " {'name': 'Ninkasi Brut IPA', 'note': 70, 'price': 44.99, 'volume': 33},\n",
+       " {'name': 'Pietra', 'note': 60, 'price': 38.99, 'volume': 33},\n",
+       " {'name': 'Desperados', 'note': 60, 'price': 35.99, 'volume': 33},\n",
+       " {'name': 'Gallia West IPA', 'note': 70, 'price': 42.99, 'volume': 33}]"
+      ]
+     },
+     "execution_count": 173,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -286,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 172,
    "metadata": {},
    "outputs": [
     {
@@ -295,24 +314,12 @@
      "text": [
       "test_01_get_prices_from_url_page2 (__main__.Lesson4Tests) ... ok\n",
       "test_02_get_prices_from_url_page3 (__main__.Lesson4Tests) ... ok\n",
-      "test_03_extract_beer_list_infos (__main__.Lesson4Tests) ... ERROR\n",
-      "\n",
-      "======================================================================\n",
-      "ERROR: test_03_extract_beer_list_infos (__main__.Lesson4Tests)\n",
-      "----------------------------------------------------------------------\n",
-      "Traceback (most recent call last):\n",
-      "  File \"<ipython-input-154-04a7f2de2f28>\", line 31, in test_03_extract_beer_list_infos\n",
-      "    infos = extract_beer_list_infos(URL_BEERLIST_FRANCE)\n",
-      "  File \"<ipython-input-144-397db4b6d924>\", line 11, in extract_beer_list_infos\n",
-      "    beers.append(extract_beer_infos(url + beer_pages[j]))\n",
-      "  File \"<ipython-input-159-d7b0ebd5d94e>\", line 7, in extract_beer_infos\n",
-      "    'price': int(soup.find('span',{'class':\"price\"}).text.split(\" \")[0]),\n",
-      "ValueError: invalid literal for int() with base 10: '42,99'\n",
+      "test_03_extract_beer_list_infos (__main__.Lesson4Tests) ... ok\n",
       "\n",
       "----------------------------------------------------------------------\n",
-      "Ran 3 tests in 0.528s\n",
+      "Ran 3 tests in 4.037s\n",
       "\n",
-      "FAILED (errors=1)\n"
+      "OK\n"
      ]
     }
    ],
